--- a/Info.plist
+++ b/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleIdentifier</key>
-    <string>com.jobinmathew.ClipboardHistory</string>
+    <string>com.local.ClipboardHistory</string>
     <key>CFBundleName</key>
     <string>ClipboardHistory</string>
     <key>CFBundlePackageType</key>
