feat: Adopt a zero-focus pasting strategy by making the history window non-activating, streamlining paste simulation, and adding required privacy entitlements.

--- a/Info.plist
+++ b/Info.plist
@@ -14,5 +14,9 @@
     <string>AppIcon</string>
     <key>LSUIElement</key>
     <true/> <!-- Run as agent (no dock icon) -->
+    <key>NSAppleEventsUsageDescription</key>
+    <string>This app needs to send keyboard events to paste content into other applications.</string>
+    <key>NSAccessibilityUsageDescription</key>
+    <string>This app needs accessibility access to simulate the Command+V shortcut for pasting.</string>
 </dict>
 </plist>
